Completed the javascript and html code for the Cleaning Products Cost Calculator feature

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./scripts/cleaning-service.js" defer></script>
 </head>
 <body>
-    <h1>Cleaning Services Platform</h1>
+    <h1>Cleaning Services App</h1>
     <section class="card">
         <h2>Cleaning Products Cost Calculator</h2>
         <div class="form">
@@ -31,10 +31,10 @@
                 <input name="quantity" type="number" id="quantity" min="1" value="1">
             </div>
             <div class="form-section">
-                <label for="cost">Cost:</label>
+                <label for="cost-output">Cost:</label>
                 <label id="cost-output"></label>
             </div>
-            <button type="button">Calculate Cost</button>
+            <button type="button" id="calculate-cost">Calculate Cost</button>
         </div>
     </section>
     <section class="card">
