started working on finding cleaning products by surface feature

--- a/index.html
+++ b/index.html
@@ -39,7 +39,26 @@
     </section>
     <section class="card">
         <h2>Find Cleaning Product By Surface</h2>
-        <div></div>
+        <div class="form">
+            <div class="form-section">
+                <fieldset>
+                    <legend>Select a surface type:</legend>
+                    <div>
+                        <input type="radio" name="surface" id="tiles" value="tiles">
+                        <label for="tiles">Tiles</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="surface" id="wood" value="wood">
+                        <label for="wood">Wood</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="surface" id="glass" value="glass">
+                        <label for="glass">Glass</label>
+                    </div>
+                </fieldset>
+            </div>
+            <div class="form-section" id="product-result"></div>
+        </div>
     </section>
     <section class="card">
         <h2>Cleaning Staff Week Schedule</h2>
