completed the logic and basic interface for displaying cleaning staff week schedule

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
     </section>
     <section class="card">
         <h2>Cleaning Staff Week Schedule</h2>
-        <div></div>
+        <div class="form-section">
+            <button id="view-schedule">View Week Schedule</button>
+            <button id="hide-schedule">Hide Week Schedule</button>
+        </div>
+        <div id="schedule-output"></div>
     </section>
 </body>
 </html>
